Switching back to previous fixed height, reducing height cut off text

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ main {
 .limit-symbols {
     max-width: 100%;
     display: block;
-    height: 140px;
+    height: 150px;
 
     overflow: hidden;
 
